[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["EdgarMartinez <edgarrr.noventa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8-isort = "^6.1.1"
colorama = "^0.4.6"
django = "^5.0.3"


[tool.poetry.group.dev.dependencies]
pep8 = "^1.7.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
